<resources>
    <string name="app_name">Login-UI</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="success">Success</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="inpows">Inpows</string>
</resources>
